# notebook_mcp

./: README.md  pyproject.toml  requirements.txt
notebook_mcp/: __init__.py  server.py
