[project]
name = "notebook-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "nbformat",
    "nbconvert[webpdf]",
    "jupyter-client",
    "ipykernel",
    "matplotlib",
    "playwright"
]

[project.scripts]
notebook-mcp = "notebook_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
