[project]
name = "notebook-mcp"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "mcp",

    # notebook core
    "nbformat",
    "nbconvert",

    # kernel execution (IMPORTANT for stability)
    "jupyter-client",
    "ipykernel",
    "pyzmq",
    "tornado",

    # visualization support
    "matplotlib",

    # PDF rendering (browser-based, cross-platform)
    "pyhtml2pdf"
]

[project.scripts]
notebook-mcp = "notebook_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["notebook_mcp"]